<resources>
    <string name="app_name">CoronaNews</string>
    <string name="news">首页</string>
    <string name="statistic">数据</string>
    <string name="entity">图谱</string>
    <string name="scholar">学者</string>
    <string name="user">我的</string>
    <string name="search">搜索</string>
    <string name="edit">编辑</string>
    <string name="loading">正在加载…</string>
    <string name="baseline">我是有底线的</string>
    <string name="toolbar">工具栏</string>
    <string name="contentTest">内容测试</string>
    <string name="history">历史</string>
    <string name="cache">缓存</string>
    <string name="quit">退出</string>
    <string name="newsTitle">标题</string>
    <string name="newsBody">正文</string>
    <string name="newsSource">来源:无</string>
<<<<<<< HEAD
    <string name="entityPageTitle"><h1>融合，开源的知识图谱</h1></string>
    <string name="entityItem">实体</string>
    <string name="attribute">属性</string>
    <string name="relation">关系</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
=======
    <string name="share">分享</string>
    <string name="news_page_title">新闻详情</string>
    <string name="preference_file_key">com.example.coronanews.PREFERENCE_FILE_KEY</string>
    <string name="browsing_history">历史记录</string>

>>>>>>> 4c46d73f81805ca4a43be061a0213742c54df9d3
</resources>