<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/newsItem"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="20dp">

    <TextView
        android:id="@+id/news_SP_title"
        android:text="@string/newsTitle"
        android:textSize="18sp"
        android:textColor="#2C2C2C"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"/>
    <TextView
        android:id="@+id/newsBody"
        android:text="@string/newsBody"
        android:textColor="#4A4A4A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/newsSource"
        android:text="@string/newsSource"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <!-- 分割线 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#EAEAEA" />

</LinearLayout>