<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintVertical_weight="3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/constraint_button"
        android:layout_marginBottom="40dp"
        android:id="@+id/constraint_img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/corona"
            app:civ_border_color="@color/colorPrimaryDark"
            app:civ_border_width="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        tools:layout_editor_absoluteX="48dp">

        <LinearLayout
            android:id="@+id/ll_history"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/history" />

            <Button
                android:id="@+id/user_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_gravity="center"
                android:background="@color/corona_background"
                android:text="@string/history"
                android:textSize="18sp"
                style="@style/Widget.AppCompat.Button.Borderless"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_like"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/ll_history">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/cache" />

            <Button
                android:id="@+id/user_like"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:background="@color/corona_background"
                android:text="@string/cache"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_quit"
            android:gravity="center"

            app:layout_constraintTop_toBottomOf="@id/ll_like"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/quit"/>
            <Button
                android:id="@+id/user_quit"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_gravity="center"
                android:text="@string/quit"
                android:textSize="18sp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@color/corona_background"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>